# Comparing_Trading_Algorithms

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/data_handling/: DataProcessing.py  DataTrash.py
src/data_processing/: DataProcessing.py
